--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
 				    </div>
 				    <div id="particles-js"></div>
 					<div id="myimg">
-						<img src="images/myimg.jpg" id="sohamsimage"/>
+						<img src="images/myimg.JPG" id="sohamsimage"/>
 					</div>
 
 				   <!-- <script src="js/rAF.js"></script>
