Fixed text in intro

--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
 			
 				    <div id="typed-strings">
 				        <p>Hello There!</p>
-				        <p>My Self : Soham Dodia.</p>
+				        <p>Myself: Soham Dodia.</p>
 				        <p>Welcome To My little Corner On the Internet.</p>
 				        <p>Check Out the website to know more!</p>
 				        <p>Thank You! :)</p>
@@ -167,7 +167,7 @@
 		<b><u>Who am i?</u></b>
 		<div class="paddingfromtop">
 		<p>Hello There !</p>
-		<p>My Self : Soham Dodia , A Geek Who Loves Travelling and Listening Songs
+		<p>Myself: Soham Dodia, A Geek Who Loves Travelling and Listening Songs
 		</p>
 		<p>Incurable Internet Nerd.</p>
 		<p>20 Years old boy who is TechEnthusiastic.</p>
